Ensure spacing under item-type-label.

--- a/assets/src/blocks/item-type-label/block.scss
+++ b/assets/src/blocks/item-type-label/block.scss
@@ -1,4 +1,5 @@
-.wp-block-ramp-item-type-label {
+div.wp-block-ramp-item-type-label {
 	font-weight: 700;
+	margin-bottom: 8px;
 	text-transform: uppercase;
 }
